fix TODOs, finish up to part C

--- a/temporal-server/dynamicconfig/development-sql.yaml
+++ b/temporal-server/dynamicconfig/development-sql.yaml
@@ -4,3 +4,9 @@ limit.maxIDLength:
 system.forceSearchAttributesCacheRefreshOnRead:
   - value: true # Dev setup only. Please don't turn this on in production.
     constraints: {}
+frontend.workerVersioningDataAPIs:
+  - value: true
+frontend.workerVersioningWorkflowAPIs:
+  - value: true
+worker.buildIdScavengerEnabled:
+  - value: true
