--- a/temporal-server/dynamicconfig/development-cass.yaml
+++ b/temporal-server/dynamicconfig/development-cass.yaml
@@ -1,3 +1,9 @@
 system.forceSearchAttributesCacheRefreshOnRead:
   - value: true # Dev setup only. Please don't turn this on in production.
     constraints: {}
+frontend.workerVersioningDataAPIs:
+  - value: true
+frontend.workerVersioningWorkflowAPIs:
+  - value: true
+worker.buildIdScavengerEnabled:
+  - value: true
