--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,8 +7,6 @@ tasks:
   - name: Go Get Fetcher # https://www.gitpod.io/docs/languages/go/#start-up-tasks
     init: go get -v -t -d ./...
   - name: Worker
-    init: |
-      curl -sSf https://temporal.download/cli.sh | sh -s - --dir /workspace
     command: |
       echo "waiting for server...."
       gp ports await 7233 && gp ports await 8080 && sleep 25 && gp preview $(gp url 8080)
@@ -23,10 +21,12 @@ tasks:
       source /workspace/edu-versioning-go-code/.bash_aliases
     openMode: split-right
   - name: Temporal Local Development Server
+    init: |
+      curl -sSf https://temporal.download/cli.sh | sh -s - --dir /workspace
     command: |
       source /workspace/edu-versioning-go-code/.bash_aliases
       export TEMPORAL_CORS_ORIGINS=http://localhost:3000
-      /workspace/bin/temporal server start-dev --ui-port 8080
+      /workspace/bin/temporal server start-dev --dynamic-config-value frontend.workerVersioningDataAPIs=true    --dynamic-config-value frontend.workerVersioningWorkflowAPIs=true --dynamic-config-value worker.buildIdScavengerEnabled=true --ui-port 8080
     openMode: tab-after
 
 ports:
