--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -23,6 +23,15 @@ tasks:
   - name: Temporal Local Development Server
     init: |
       curl -sSf https://temporal.download/cli.sh | sh -s - --dir /workspace
+	  # install tctl for backwards compat
+      mkdir -p tctl_temp
+      pushd tctl_temp
+      curl -sL -O https://github.com/temporalio/tctl/releases/download/v1.18.0/tctl_1.18.0_linux_amd64.tar.gz
+      tar zxvf tctl_1.18*
+      mv tctl /workspace/bin/tctl
+      chmod +x /workspace/bin/tctl
+      popd
+      rm -rf tctl_temp
     command: |
       source /workspace/edu-versioning-go-code/.bash_aliases
       export TEMPORAL_CORS_ORIGINS=http://localhost:3000
