--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,7 @@
 image: gitpod/workspace-full:2023-01-16-03-31-28
 tasks:
   - name: Set up aliases 
-    init: cp .bash_aliases ~/.bash_aliases   # ensure new terminals also have access to tctl
+    init: cp .bash_aliases ~/.bash_aliases   # ensure new terminals load the aliases
   - name: install staticcheck
     init: go install honnef.co/go/tools/cmd/staticcheck@latest  # fix for 'Analysis Tools Missing' warning in status bar
   - name: Go Get Fetcher # https://www.gitpod.io/docs/languages/go/#start-up-tasks
@@ -35,7 +35,7 @@ tasks:
     command: |
       source /workspace/edu-versioning-go-code/.bash_aliases
       export TEMPORAL_CORS_ORIGINS=http://localhost:3000
-      /workspace/bin/temporal server start-dev --dynamic-config-value frontend.workerVersioningDataAPIs=true    --dynamic-config-value frontend.workerVersioningWorkflowAPIs=true --dynamic-config-value worker.buildIdScavengerEnabled=true --ui-port 8080
+      /workspace/bin/temporal server start-dev --dynamic-config-value frontend.workerVersioningDataAPIs=true    --dynamic-config-value frontend.workerVersioningWorkflowAPIs=true --dynamic-config-value worker.buildIdScavengerEnabled=true --ui-port 8080 --db-filename $HOME/.cluster-persistence.db
     openMode: tab-after
 
 ports:
