Proper configuration of cluster deployed through Temporal CLI (#9)
* remove docker compose from gitpod, remove workflow reset

* remove tctl example in favor of temporal cli

* bootstrap correct terminal

* installed tctl, since it wasn't present in the exercise environment

* removed alias for tctl, since the binary is now built and installed as part of setup

* set alias for tctl command, since it's installed into a directory outside the $PATH

* updated command used to start server so that the database will persist to disk and therefore survive crashes and restarts

* removed obsolete files, since these were only needed in clusters deployed with Docker Compose

---------

Co-authored-by: Alex Garnett <axfelix@gmail.com>

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,18 +1,13 @@
 image: gitpod/workspace-full:2023-01-16-03-31-28
 tasks:
   - name: Set up aliases 
-    init: cp .bash_aliases ~/.bash_aliases   # ensure new terminals also have access to tctl
+    init: cp .bash_aliases ~/.bash_aliases   # ensure new terminals load the aliases
   - name: install staticcheck
     init: go install honnef.co/go/tools/cmd/staticcheck@latest  # fix for 'Analysis Tools Missing' warning in status bar
   - name: Go Get Fetcher # https://www.gitpod.io/docs/languages/go/#start-up-tasks
     init: go get -v -t -d ./...
   - name: Worker
-    init: |
-      pushd temporal-server
-      docker-compose pull
-      popd
     command: |
-      gp sync-done dockerpull
       echo "waiting for server...."
       gp ports await 7233 && gp ports await 8080 && sleep 25 && gp preview $(gp url 8080)
       clear
@@ -26,10 +21,21 @@ tasks:
       source /workspace/edu-versioning-go-code/.bash_aliases
     openMode: split-right
   - name: Temporal Local Development Server
+    init: |
+      curl -sSf https://temporal.download/cli.sh | sh -s - --dir /workspace
+	  # install tctl for backwards compat
+      mkdir -p tctl_temp
+      pushd tctl_temp
+      curl -sL -O https://github.com/temporalio/tctl/releases/download/v1.18.0/tctl_1.18.0_linux_amd64.tar.gz
+      tar zxvf tctl_1.18*
+      mv tctl /workspace/bin/tctl
+      chmod +x /workspace/bin/tctl
+      popd
+      rm -rf tctl_temp
     command: |
-      gp sync-await dockerpull
-      cd temporal-server
-      docker-compose up
+      source /workspace/edu-versioning-go-code/.bash_aliases
+      export TEMPORAL_CORS_ORIGINS=http://localhost:3000
+      /workspace/bin/temporal server start-dev --dynamic-config-value frontend.workerVersioningDataAPIs=true    --dynamic-config-value frontend.workerVersioningWorkflowAPIs=true --dynamic-config-value worker.buildIdScavengerEnabled=true --ui-port 8080 --db-filename $HOME/.cluster-persistence.db
     openMode: tab-after
 
 ports:
@@ -42,11 +48,6 @@ ports:
   - name: Temporal Web UI v2
     port: 8080 # temporal UI
     description: New (v2) Temporal Web UI
-    onOpen: ignore
-    visibility: private
-  - name: Translation Service
-    description: Local microservice used in exercises
-    port: 9998
     onOpen: ignore
     visibility: private
 
