--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,4 @@
-image: gitpod/workspace-full:2023-01-16-03-31-28
+image: axfelix/temporal-edu:1.0
 tasks:
   - name: Set up aliases 
     init: cp .bash_aliases ~/.bash_aliases   # ensure new terminals load the aliases
